Kaggle Notebook | Multilayer Perceptron & XOR Problem | Version 2

--- a/05. Multilayer Perceptron & XOR Problem.ipynb
+++ b/05. Multilayer Perceptron & XOR Problem.ipynb
@@ -2,72 +2,94 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9968ddf1",
+   "id": "83487b54",
    "metadata": {
     "papermill": {
-     "duration": 0.003096,
-     "end_time": "2025-08-30T04:28:56.928239",
+     "duration": 0.003068,
+     "end_time": "2025-09-24T17:09:16.807324",
      "exception": false,
-     "start_time": "2025-08-30T04:28:56.925143",
+     "start_time": "2025-09-24T17:09:16.804256",
      "status": "completed"
     },
     "tags": []
    },
    "source": [
-    "# <center>**Lab Sheet-5**</center>\n",
-    "# <center>**Multilayer Perceptron & XOR Problem**</center>"
+    "# <center>Lab Sheet-5</center>\n",
+    "# <center>Multilayer Perceptron & XOR Problem</center>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4420fdd2",
+   "id": "7d768109",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-30T04:28:56.935471Z",
-     "iopub.status.busy": "2025-08-30T04:28:56.934571Z",
-     "iopub.status.idle": "2025-08-30T04:28:56.942466Z",
-     "shell.execute_reply": "2025-08-30T04:28:56.941535Z"
+     "iopub.execute_input": "2025-09-24T17:09:16.814173Z",
+     "iopub.status.busy": "2025-09-24T17:09:16.813730Z",
+     "iopub.status.idle": "2025-09-24T17:09:16.823513Z",
+     "shell.execute_reply": "2025-09-24T17:09:16.822429Z"
     },
     "papermill": {
-     "duration": 0.012776,
-     "end_time": "2025-08-30T04:28:56.943916",
+     "duration": 0.014793,
+     "end_time": "2025-09-24T17:09:16.825037",
      "exception": false,
-     "start_time": "2025-08-30T04:28:56.931140",
+     "start_time": "2025-09-24T17:09:16.810244",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "np.random.seed(42)\n",
-    "os.makedirs(\"lab5_plots\", exist_ok=True)"
+    "os.makedirs(\"lab5_plots\", exist_ok=True)\n",
+    "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a38e0735",
+   "id": "49b83e51",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-30T04:28:56.950156Z",
-     "iopub.status.busy": "2025-08-30T04:28:56.949883Z",
-     "iopub.status.idle": "2025-08-30T04:28:56.956187Z",
-     "shell.execute_reply": "2025-08-30T04:28:56.955299Z"
+     "iopub.execute_input": "2025-09-24T17:09:16.831627Z",
+     "iopub.status.busy": "2025-09-24T17:09:16.831346Z",
+     "iopub.status.idle": "2025-09-24T17:09:16.838221Z",
+     "shell.execute_reply": "2025-09-24T17:09:16.837178Z"
     },
     "papermill": {
-     "duration": 0.011218,
-     "end_time": "2025-08-30T04:28:56.957817",
+     "duration": 0.01191,
+     "end_time": "2025-09-24T17:09:16.839790",
      "exception": false,
-     "start_time": "2025-08-30T04:28:56.946599",
+     "start_time": "2025-09-24T17:09:16.827880",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
+     ]
+    }
+   ],
    "source": [
     "# Utility functions\n",
     "def sigmoid(x): return 1 / (1 + np.exp(-x))\n",
@@ -79,6 +101,10 @@
     "def tanh(x): return np.tanh(x)\n",
     "def dtanh(x): return 1 - np.tanh(x)**2\n",
     "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
+    "\n",
     "# Dataset: XOR truth table\n",
     "X = np.array([[0,0],[0,1],[1,0],[1,1]])\n",
     "y = np.array([[0],[1],[1],[0]])   # target"
@@ -86,13 +112,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1a98b33",
+   "id": "7e5f679a",
    "metadata": {
     "papermill": {
-     "duration": 0.002315,
-     "end_time": "2025-08-30T04:28:56.962755",
+     "duration": 0.002542,
+     "end_time": "2025-09-24T17:09:16.845245",
      "exception": false,
-     "start_time": "2025-08-30T04:28:56.960440",
+     "start_time": "2025-09-24T17:09:16.842703",
      "status": "completed"
     },
     "tags": []
@@ -106,19 +132,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aae31ce8",
+   "id": "e722c76e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-30T04:28:56.969271Z",
-     "iopub.status.busy": "2025-08-30T04:28:56.968583Z",
-     "iopub.status.idle": "2025-08-30T04:28:57.933382Z",
-     "shell.execute_reply": "2025-08-30T04:28:57.931982Z"
+     "iopub.execute_input": "2025-09-24T17:09:16.852074Z",
+     "iopub.status.busy": "2025-09-24T17:09:16.851693Z",
+     "iopub.status.idle": "2025-09-24T17:09:17.948031Z",
+     "shell.execute_reply": "2025-09-24T17:09:17.946879Z"
     },
     "papermill": {
-     "duration": 0.96978,
-     "end_time": "2025-08-30T04:28:57.935034",
+     "duration": 1.101788,
+     "end_time": "2025-09-24T17:09:17.949745",
      "exception": false,
-     "start_time": "2025-08-30T04:28:56.965254",
+     "start_time": "2025-09-24T17:09:16.847957",
      "status": "completed"
     },
     "tags": []
@@ -128,6 +154,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n",
       "[0] loss=0.6955\n",
       "[1000] loss=0.6928\n",
       "[2000] loss=0.4331\n",
@@ -208,6 +236,10 @@
     "        else:\n",
     "            return a2\n",
     "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
+    "\n",
     "# Train with Sigmoid activation (default)\n",
     "mlp = MLP(2, 2, 1, activation=\"sigmoid\", lr=0.5)\n",
     "loss_hist, logs = mlp.train(X,y,epochs=5000,log_interval=1000)\n",
@@ -226,13 +258,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c4fc855",
+   "id": "e4f43075",
    "metadata": {
     "papermill": {
-     "duration": 0.002356,
-     "end_time": "2025-08-30T04:28:57.940165",
+     "duration": 0.002842,
+     "end_time": "2025-09-24T17:09:17.955659",
      "exception": false,
-     "start_time": "2025-08-30T04:28:57.937809",
+     "start_time": "2025-09-24T17:09:17.952817",
      "status": "completed"
     },
     "tags": []
@@ -244,19 +276,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cc68290e",
+   "id": "73815476",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-30T04:28:57.946459Z",
-     "iopub.status.busy": "2025-08-30T04:28:57.946063Z",
-     "iopub.status.idle": "2025-08-30T04:28:57.952084Z",
-     "shell.execute_reply": "2025-08-30T04:28:57.951168Z"
+     "iopub.execute_input": "2025-09-24T17:09:17.962554Z",
+     "iopub.status.busy": "2025-09-24T17:09:17.962245Z",
+     "iopub.status.idle": "2025-09-24T17:09:17.968352Z",
+     "shell.execute_reply": "2025-09-24T17:09:17.967220Z"
     },
     "papermill": {
-     "duration": 0.010802,
-     "end_time": "2025-08-30T04:28:57.953429",
+     "duration": 0.011458,
+     "end_time": "2025-09-24T17:09:17.969918",
      "exception": false,
-     "start_time": "2025-08-30T04:28:57.942627",
+     "start_time": "2025-09-24T17:09:17.958460",
      "status": "completed"
     },
     "tags": []
@@ -266,6 +298,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n",
       "Logged sample W1 at 0, mid, final epoch:\n",
       "W1[0]:\n",
       " [[ 0.24800434 -0.06956843]\n",
@@ -277,6 +311,10 @@
     }
    ],
    "source": [
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
+    "\n",
     "print(\"Logged sample W1 at 0, mid, final epoch:\")\n",
     "print(\"W1[0]:\\n\", logs[\"W1\"][0])\n",
     "print(\"W1[last]:\\n\", logs[\"W1\"][-1])"
@@ -284,13 +322,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96b10bee",
+   "id": "58928b15",
    "metadata": {
     "papermill": {
-     "duration": 0.002337,
-     "end_time": "2025-08-30T04:28:57.958645",
+     "duration": 0.002737,
+     "end_time": "2025-09-24T17:09:17.975780",
      "exception": false,
-     "start_time": "2025-08-30T04:28:57.956308",
+     "start_time": "2025-09-24T17:09:17.973043",
      "status": "completed"
     },
     "tags": []
@@ -302,19 +340,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8a10a8d2",
+   "id": "0c5d6448",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-30T04:28:57.965344Z",
-     "iopub.status.busy": "2025-08-30T04:28:57.964560Z",
-     "iopub.status.idle": "2025-08-30T04:28:59.747952Z",
-     "shell.execute_reply": "2025-08-30T04:28:59.746889Z"
+     "iopub.execute_input": "2025-09-24T17:09:17.982772Z",
+     "iopub.status.busy": "2025-09-24T17:09:17.982464Z",
+     "iopub.status.idle": "2025-09-24T17:09:19.772313Z",
+     "shell.execute_reply": "2025-09-24T17:09:19.771406Z"
     },
     "papermill": {
-     "duration": 1.788293,
-     "end_time": "2025-08-30T04:28:59.749483",
+     "duration": 1.795109,
+     "end_time": "2025-09-24T17:09:19.773844",
      "exception": false,
-     "start_time": "2025-08-30T04:28:57.961190",
+     "start_time": "2025-09-24T17:09:17.978735",
      "status": "completed"
     },
     "tags": []
@@ -330,6 +368,8 @@
       "[2000] loss=0.6931\n",
       "[0] loss=0.7025\n",
       "[2000] loss=0.3481\n",
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n",
       "Final XOR predictions by activation:\n",
       "sigmoid -> [0 1 0 1]\n",
       "relu -> [1 1 1 1]\n",
@@ -356,6 +396,10 @@
     "plt.legend()\n",
     "plt.savefig(\"lab5_plots/activation_compare.png\",dpi=150,bbox_inches=\"tight\"); plt.close()\n",
     "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
+    "\n",
     "print(\"Final XOR predictions by activation:\")\n",
     "for act in acts:\n",
     "    print(act, \"->\", final_preds[act].flatten())"
@@ -363,13 +407,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "409bfab1",
+   "id": "4d775663",
    "metadata": {
     "papermill": {
-     "duration": 0.002624,
-     "end_time": "2025-08-30T04:28:59.755081",
+     "duration": 0.003007,
+     "end_time": "2025-09-24T17:09:19.780216",
      "exception": false,
-     "start_time": "2025-08-30T04:28:59.752457",
+     "start_time": "2025-09-24T17:09:19.777209",
      "status": "completed"
     },
     "tags": []
@@ -381,19 +425,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0fa6c9ef",
+   "id": "3021dcd0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-08-30T04:28:59.762252Z",
-     "iopub.status.busy": "2025-08-30T04:28:59.761689Z",
-     "iopub.status.idle": "2025-08-30T04:28:59.770869Z",
-     "shell.execute_reply": "2025-08-30T04:28:59.769953Z"
+     "iopub.execute_input": "2025-09-24T17:09:19.787476Z",
+     "iopub.status.busy": "2025-09-24T17:09:19.787162Z",
+     "iopub.status.idle": "2025-09-24T17:09:19.795737Z",
+     "shell.execute_reply": "2025-09-24T17:09:19.794809Z"
     },
     "papermill": {
-     "duration": 0.014297,
-     "end_time": "2025-08-30T04:28:59.772223",
+     "duration": 0.0144,
+     "end_time": "2025-09-24T17:09:19.797643",
      "exception": false,
-     "start_time": "2025-08-30T04:28:59.757926",
+     "start_time": "2025-09-24T17:09:19.783243",
      "status": "completed"
     },
     "tags": []
@@ -403,6 +447,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n",
       "decision rule argmax: [0 1 0]\n",
       "decision rule threshold: [[1 0 0]\n",
       " [0 1 0]\n",
@@ -428,6 +474,10 @@
     "            return (probs>0.4).astype(int) # multi-label\n",
     "        else:\n",
     "            return probs\n",
+    "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
     "\n",
     "# sample\n",
     "X3 = np.array([[1,0],[0,1],[1,1]])\n",
@@ -466,14 +516,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.477459,
-   "end_time": "2025-08-30T04:29:00.193558",
+   "duration": 8.82462,
+   "end_time": "2025-09-24T17:09:20.220210",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-08-30T04:28:51.716099",
+   "start_time": "2025-09-24T17:09:11.395590",
    "version": "2.6.0"
   }
  },
