Kaggle Notebook | Linear Filters & LMS (Least Mean Squares) | Version 3

--- a/04. Linear Filters & LMS (Least Mean Squares).ipynb
+++ b/04. Linear Filters & LMS (Least Mean Squares).ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "81aa0e00",
+   "id": "6f862856",
    "metadata": {
     "papermill": {
-     "duration": 0.003336,
-     "end_time": "2025-09-06T05:42:26.406620",
+     "duration": 0.003588,
+     "end_time": "2025-09-24T17:24:18.341009",
      "exception": false,
-     "start_time": "2025-09-06T05:42:26.403284",
+     "start_time": "2025-09-24T17:24:18.337421",
      "status": "completed"
     },
     "tags": []
@@ -21,40 +21,53 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9ccd1ba8",
+   "id": "616e2016",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-06T05:42:26.414166Z",
-     "iopub.status.busy": "2025-09-06T05:42:26.413744Z",
-     "iopub.status.idle": "2025-09-06T05:42:26.424839Z",
-     "shell.execute_reply": "2025-09-06T05:42:26.423709Z"
+     "iopub.execute_input": "2025-09-24T17:24:18.348701Z",
+     "iopub.status.busy": "2025-09-24T17:24:18.348278Z",
+     "iopub.status.idle": "2025-09-24T17:24:18.359232Z",
+     "shell.execute_reply": "2025-09-24T17:24:18.358124Z"
     },
     "papermill": {
-     "duration": 0.016941,
-     "end_time": "2025-09-06T05:42:26.426895",
+     "duration": 0.016589,
+     "end_time": "2025-09-24T17:24:18.360974",
      "exception": false,
-     "start_time": "2025-09-06T05:42:26.409954",
+     "start_time": "2025-09-24T17:24:18.344385",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "np.random.seed(42)"
+    "np.random.seed(42)\n",
+    "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4e37dc2c",
+   "id": "924cc04f",
    "metadata": {
     "papermill": {
-     "duration": 0.002629,
-     "end_time": "2025-09-06T05:42:26.432814",
+     "duration": 0.002733,
+     "end_time": "2025-09-24T17:24:18.366954",
      "exception": false,
-     "start_time": "2025-09-06T05:42:26.430185",
+     "start_time": "2025-09-24T17:24:18.364221",
      "status": "completed"
     },
     "tags": []
@@ -66,19 +79,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "24b52268",
+   "id": "daaa1e2d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-06T05:42:26.440125Z",
-     "iopub.status.busy": "2025-09-06T05:42:26.439700Z",
-     "iopub.status.idle": "2025-09-06T05:42:26.783546Z",
-     "shell.execute_reply": "2025-09-06T05:42:26.782372Z"
+     "iopub.execute_input": "2025-09-24T17:24:18.374747Z",
+     "iopub.status.busy": "2025-09-24T17:24:18.374417Z",
+     "iopub.status.idle": "2025-09-24T17:24:18.751351Z",
+     "shell.execute_reply": "2025-09-24T17:24:18.750171Z"
     },
     "papermill": {
-     "duration": 0.34974,
-     "end_time": "2025-09-06T05:42:26.785442",
+     "duration": 0.383378,
+     "end_time": "2025-09-24T17:24:18.753222",
      "exception": false,
-     "start_time": "2025-09-06T05:42:26.435702",
+     "start_time": "2025-09-24T17:24:18.369844",
      "status": "completed"
     },
     "tags": []
@@ -88,7 +101,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Weights (slope, intercept) = [1.8840332  1.12888618]\n"
+      "Weights (slope, intercept) = [1.8840332  1.12888618]\n",
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
      ]
     }
    ],
@@ -103,6 +118,10 @@
     "\n",
     "print(\"Weights (slope, intercept) =\", w)\n",
     "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
+    "\n",
     "# Plot regression line\n",
     "plt.scatter(X, y, label=\"Data\")\n",
     "plt.plot(X, X_mat @ w, color=\"red\", label=\"Least Squares Fit\")\n",
@@ -113,13 +132,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23c2cb8c",
+   "id": "dc8f3c30",
    "metadata": {
     "papermill": {
-     "duration": 0.0027,
-     "end_time": "2025-09-06T05:42:26.791285",
+     "duration": 0.002828,
+     "end_time": "2025-09-24T17:24:18.759473",
      "exception": false,
-     "start_time": "2025-09-06T05:42:26.788585",
+     "start_time": "2025-09-24T17:24:18.756645",
      "status": "completed"
     },
     "tags": []
@@ -131,19 +150,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f337ffd9",
+   "id": "45c86ffc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-06T05:42:26.799590Z",
-     "iopub.status.busy": "2025-09-06T05:42:26.799261Z",
-     "iopub.status.idle": "2025-09-06T05:42:27.006119Z",
-     "shell.execute_reply": "2025-09-06T05:42:27.004856Z"
+     "iopub.execute_input": "2025-09-24T17:24:18.767034Z",
+     "iopub.status.busy": "2025-09-24T17:24:18.766642Z",
+     "iopub.status.idle": "2025-09-24T17:24:18.989573Z",
+     "shell.execute_reply": "2025-09-24T17:24:18.988402Z"
     },
     "papermill": {
-     "duration": 0.213039,
-     "end_time": "2025-09-06T05:42:27.007862",
+     "duration": 0.228737,
+     "end_time": "2025-09-24T17:24:18.991320",
      "exception": false,
-     "start_time": "2025-09-06T05:42:26.794823",
+     "start_time": "2025-09-24T17:24:18.762583",
      "status": "completed"
     },
     "tags": []
@@ -153,6 +172,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n",
       "Final LMS weight = 0.6602643401920488\n"
      ]
     }
@@ -177,6 +198,10 @@
     "        w += lr * e * x[t-1]\n",
     "        errors.append(e**2)\n",
     "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
+    "\n",
     "print(\"Final LMS weight =\", w)\n",
     "\n",
     "plt.plot(errors)\n",
@@ -188,13 +213,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c297093",
+   "id": "8a86a1cf",
    "metadata": {
     "papermill": {
-     "duration": 0.003241,
-     "end_time": "2025-09-06T05:42:27.014347",
+     "duration": 0.002793,
+     "end_time": "2025-09-24T17:24:18.997433",
      "exception": false,
-     "start_time": "2025-09-06T05:42:27.011106",
+     "start_time": "2025-09-24T17:24:18.994640",
      "status": "completed"
     },
     "tags": []
@@ -206,24 +231,33 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "43d3ac50",
+   "id": "d21c660a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-06T05:42:27.021732Z",
-     "iopub.status.busy": "2025-09-06T05:42:27.021385Z",
-     "iopub.status.idle": "2025-09-06T05:42:27.398585Z",
-     "shell.execute_reply": "2025-09-06T05:42:27.397443Z"
+     "iopub.execute_input": "2025-09-24T17:24:19.004737Z",
+     "iopub.status.busy": "2025-09-24T17:24:19.004406Z",
+     "iopub.status.idle": "2025-09-24T17:24:19.397485Z",
+     "shell.execute_reply": "2025-09-24T17:24:19.396208Z"
     },
     "papermill": {
-     "duration": 0.382867,
-     "end_time": "2025-09-06T05:42:27.400296",
+     "duration": 0.412199,
+     "end_time": "2025-09-24T17:24:19.412645",
      "exception": false,
-     "start_time": "2025-09-06T05:42:27.017429",
+     "start_time": "2025-09-24T17:24:19.000446",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
+     ]
+    }
+   ],
    "source": [
     "# Error surface: E(w) = mean((x_t - w*x_{t-1})^2)\n",
     "W = np.linspace(-1,2,100)\n",
@@ -234,6 +268,10 @@
     "plt.xlabel(\"Weight\")\n",
     "plt.ylabel(\"MSE\")\n",
     "plt.savefig(\"lab4_error_surface.png\", dpi=150); plt.close()\n",
+    "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
     "\n",
     "# Simulate gradient descent path\n",
     "w = -1.0\n",
@@ -254,13 +292,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7addbe6",
+   "id": "8b2cf9a2",
    "metadata": {
     "papermill": {
-     "duration": 0.002711,
-     "end_time": "2025-09-06T05:42:27.406258",
+     "duration": 0.003069,
+     "end_time": "2025-09-24T17:24:19.419364",
      "exception": false,
-     "start_time": "2025-09-06T05:42:27.403547",
+     "start_time": "2025-09-24T17:24:19.416295",
      "status": "completed"
     },
     "tags": []
@@ -272,24 +310,33 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "22289090",
+   "id": "51640068",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-06T05:42:27.413760Z",
-     "iopub.status.busy": "2025-09-06T05:42:27.413394Z",
-     "iopub.status.idle": "2025-09-06T05:42:27.594940Z",
-     "shell.execute_reply": "2025-09-06T05:42:27.593867Z"
+     "iopub.execute_input": "2025-09-24T17:24:19.427488Z",
+     "iopub.status.busy": "2025-09-24T17:24:19.427128Z",
+     "iopub.status.idle": "2025-09-24T17:24:19.616010Z",
+     "shell.execute_reply": "2025-09-24T17:24:19.614763Z"
     },
     "papermill": {
-     "duration": 0.187582,
-     "end_time": "2025-09-06T05:42:27.596702",
+     "duration": 0.195219,
+     "end_time": "2025-09-24T17:24:19.617742",
      "exception": false,
-     "start_time": "2025-09-06T05:42:27.409120",
+     "start_time": "2025-09-24T17:24:19.422523",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
+     ]
+    }
+   ],
    "source": [
     "def train_gd(lr_schedule):\n",
     "    w = 0.0\n",
@@ -306,6 +353,10 @@
     "# Annealing LR\n",
     "loss_anneal = train_gd(lambda e: 0.1/(1+0.1*e))\n",
     "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
+    "\n",
     "plt.plot(loss_const,label=\"Constant LR\")\n",
     "plt.plot(loss_anneal,label=\"Annealing LR\")\n",
     "plt.title(\"GD vs LR Annealing\")\n",
@@ -317,13 +368,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c78986b8",
+   "id": "ffc47293",
    "metadata": {
     "papermill": {
-     "duration": 0.002643,
-     "end_time": "2025-09-06T05:42:27.602372",
+     "duration": 0.003607,
+     "end_time": "2025-09-24T17:24:19.624750",
      "exception": false,
-     "start_time": "2025-09-06T05:42:27.599729",
+     "start_time": "2025-09-24T17:24:19.621143",
      "status": "completed"
     },
     "tags": []
@@ -335,29 +386,42 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "251c55e7",
+   "id": "d3eb3b98",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-06T05:42:27.609251Z",
-     "iopub.status.busy": "2025-09-06T05:42:27.608937Z",
-     "iopub.status.idle": "2025-09-06T05:42:27.808091Z",
-     "shell.execute_reply": "2025-09-06T05:42:27.806881Z"
+     "iopub.execute_input": "2025-09-24T17:24:19.632536Z",
+     "iopub.status.busy": "2025-09-24T17:24:19.632187Z",
+     "iopub.status.idle": "2025-09-24T17:24:19.852396Z",
+     "shell.execute_reply": "2025-09-24T17:24:19.851226Z"
     },
     "papermill": {
-     "duration": 0.204721,
-     "end_time": "2025-09-06T05:42:27.809926",
+     "duration": 0.226517,
+     "end_time": "2025-09-24T17:24:19.854439",
      "exception": false,
-     "start_time": "2025-09-06T05:42:27.605205",
+     "start_time": "2025-09-24T17:24:19.627922",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Somesh Singh\n",
+      "Roll Number: 233025921\n"
+     ]
+    }
+   ],
    "source": [
     "rates = [0.01, 0.1, 0.5]\n",
     "for r in rates:\n",
     "    losses = train_gd(lambda e,r=r: r)\n",
     "    plt.plot(losses,label=f\"LR={r}\")\n",
+    "\n",
+    "# Print the name and roll number\n",
+    "print(\"Name: Somesh Singh\")\n",
+    "print(\"Roll Number: 233025921\")\n",
     "\n",
     "plt.title(\"Effect of Learning Rate on Convergence\")\n",
     "plt.xlabel(\"Epoch\")\n",
@@ -396,14 +460,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.433182,
-   "end_time": "2025-09-06T05:42:28.233312",
+   "duration": 8.745517,
+   "end_time": "2025-09-24T17:24:20.279445",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-09-06T05:42:19.800130",
+   "start_time": "2025-09-24T17:24:11.533928",
    "version": "2.6.0"
   }
  },
